# proyecto_memoria_titulo

./: .gitignore  pyproject.toml
demo/: cli.py  trigger_rollout.py
ota_campaign_client/: cli.py  constants.py  device_info.py  flatpak.py  main.py  utils.py
ota_campaign_client/packaging/: __init__.py  deb.py  rpm.py
ota_campaign_server/: constants.py  dto.py  entities.py  main.py
ota_campaign_server/packaging/: __init__.py  rpm.py
