[tool.poetry]
name = "pmtserver"
version = "0.1.0"
description = ""
authors = ["duskje <duskje@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.4.1"
loguru = "^0.7.2"
xdg-base-dirs = "^6.0.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
